'fixed' bug in clouds section with sticky element causing horizontal overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,7 @@ body{margin: 0; font-family: "Open Sans", sans-serif;}
   background-repeat: no-repeat;
   background-size:cover;
   position: relative;
+  width: 100%;
   height: 75vh;
 }
 
